# aipf

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README.ru.md  RELEASE.md  SECURITY.md  pyproject.toml  run-aipf-interactive.bat  run-aipf-interactive.sh
.github/workflows/: ci.yml
assets/: logo.txt
docs/: backend-map.md  branding.md  capture-replay.md  positioning.md  risk-zones.md  use-cases.md
src/aipf/: __main__.py  capture.py  cli.py  client.py  config.py  debug_trace.py  fingerprints.py  logging_setup.py  models.py  prompts.py  redaction.py  reporter.py  scanning.py
src/aipf/checks/: __init__.py  base.py  completion.py  fingerprint.py  injection.py  latency.py  leaks.py  models_list.py  streaming.py  tool_ids.py
tests/: conftest.py  output_utils.py
tests/integration/: test_client_anthropic.py  test_client_openai.py  test_run_end_to_end.py
tests/unit/: test_capture.py  test_cli_help.py  test_client_retry.py  test_debug_trace.py  test_logging_setup.py  test_models.py  test_redaction.py  test_reporter.py  test_scanning.py
