[project]
name = "aipf"
version = "0.1.0"
description = "API Proxy Forensics Toolkit - analyze OpenAI/Anthropic-compatible LLM proxies"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "JumpCodeFrog" }]
maintainers = [{ name = "JumpCodeFrog" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "anthropic",
    "cli",
    "forensics",
    "llm",
    "openai",
    "proxy",
    "security",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "click>=8.1",
    "rich>=13.7",
    "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
aipf = "aipf.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
reproducible = true

[tool.hatch.build.targets.wheel]
packages = ["src/aipf"]

[tool.hatch.build.targets.sdist]
include = [
    "/ARCHITECTURE.md",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/LICENSE",
    "/README.md",
    "/README.ru.md",
    "/RELEASE.md",
    "/SECURITY.md",
    "/assets",
    "/docs",
    "/pyproject.toml",
    "/run-aipf-interactive.bat",
    "/run-aipf-interactive.sh",
    "/src",
    "/tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.mypy]
strict = true
files = ["src/aipf"]
python_version = "3.11"

[[tool.mypy.overrides]]
module = "pythonjsonlogger.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
